AG-52365 Fix Desktop modal in popup
Squashed commit of the following:

commit febc40b18ffbee38efe5253f304c6e017a85cede
Author: Alexandr Zaitsev <a.zaitsev@adguard.com>
Date:   Wed Mar 25 16:35:26 2026 +0300

    description fix

commit 19462481c9862266023741567891a08cbce62138
Author: Alexandr Zaitsev <a.zaitsev@adguard.com>
Date:   Wed Mar 25 16:32:06 2026 +0300

    fix description

commit 25272ad25fe38fef8ce33cf7d6f95cde9745ad08
Author: Alexandr Zaitsev <a.zaitsev@adguard.com>
Date:   Wed Mar 25 16:04:32 2026 +0300

    Update Russian locale text for VPN blocked error messages and adjust layout styling

commit 4f756194e3a934af5fc67c36c8df89174415d32c
Author: Alexandr Zaitsev <a.zaitsev@adguard.com>
Date:   Wed Mar 25 15:18:43 2026 +0300

    AG-52365 fix VPN clocked details layout

--- a/src/popup/components/VpnBlockedError/vpn-blocked-details.pcss
+++ b/src/popup/components/VpnBlockedError/vpn-blocked-details.pcss
@@ -1,4 +1,7 @@
 .vpn-blocked-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 560px;
     top: 18px;
     padding-top: 28px;
@@ -6,31 +9,50 @@
     font-family: var(--font-stack);
 
     &__image {
+        flex-shrink: 0;
+        flex-grow: 1;
         width: 100%;
+        min-height: 140px;
+        max-height: 210px;
         margin-bottom: 16px;
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
-        height: 170px;
         background-image: url("../../../assets/images/vpn-blocked-error-ninja.svg");
     }
 
     &__title {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 4;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        flex-shrink: 0;
         font-weight: 700;
         line-height: 24px;
+        margin-bottom: 8px;
     }
 
     &__description {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 5;
+        overflow: hidden;
         font-size: 16px;
         line-height: 1.3;
         font-weight: 400;
-        padding: 0 16px;
-        margin-bottom: 36px;
+        margin-bottom: 24px;
+        padding: 0 8px;
     }
 
     &__button {
+        flex-shrink: 0;
         height: 56px;
         margin-bottom: 16px;
         padding: 12px 20px;
+    }
+
+    &__description + &__button {
+        margin-top: auto;
     }
 }
